--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
                 background-color: black;
                 background-image: url('img/wallpaper002.jpg');
                 background-position: center center;
-                background-repeat: no-repeat;
+                background-repeat: repeat-y;
                 background-size: cover;
             }
 
@@ -30,6 +30,12 @@
     <body>
         <main>
             <h1>Teste de Imagem de Fundo</h1>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit recusandae tempora, consequatur error, eum illo harum impedit incidunt ipsum obcaecati accusantium totam libero! Ex minima illo corporis? Ipsa, adipisci repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto quisquam, deserunt dolorum consequuntur earum. Eligendi veritatis repellat deleniti, quibusdam eos possimus voluptatum laudantium quaerat nostrum, sed consectetur error enim!</p>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit recusandae tempora, consequatur error, eum illo harum impedit incidunt ipsum obcaecati accusantium totam libero! Ex minima illo corporis? Ipsa, adipisci repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto quisquam, deserunt dolorum consequuntur earum. Eligendi veritatis repellat deleniti, quibusdam eos possimus voluptatum laudantium quaerat nostrum, sed consectetur error enim!</p>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit recusandae tempora, consequatur error, eum illo harum impedit incidunt ipsum obcaecati accusantium totam libero! Ex minima illo corporis? Ipsa, adipisci repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto quisquam, deserunt dolorum consequuntur earum. Eligendi veritatis repellat deleniti, quibusdam eos possimus voluptatum laudantium quaerat nostrum, sed consectetur error enim!</p>
 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit recusandae tempora, consequatur error, eum illo harum impedit incidunt ipsum obcaecati accusantium totam libero! Ex minima illo corporis? Ipsa, adipisci repellat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam iusto quisquam, deserunt dolorum consequuntur earum. Eligendi veritatis repellat deleniti, quibusdam eos possimus voluptatum laudantium quaerat nostrum, sed consectetur error enim!</p>
         </main>
