--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -16,23 +16,18 @@
 
             table{
                 width: 400px;  
-                border-collapse: collapse;  
-                text-align: center;    
+                height: 400px;
+                border-collapse: collapse;     
                 margin: auto;        
-            }
-
-            tr.linha{
-                background-color: gray;
             }
 
             td{
                 border: 1px solid black;
                 padding: 10px;
+                text-align: center; /*Alinhamento horizontal*/
+                vertical-align: middle;
             }
 
-            td.dado{
-                background-color: yellow;
-            }
         </style>
     </head>
 
