tabela002 feita e tabela003 feita

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,9 +10,31 @@
                 font-family: Arial, Helvetica, sans-serif;
             }
 
+            h1{
+                text-align: center;
+                font-variant: small-caps;
+                font-weight: bolder;
+                background-color: black;
+                color: white;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+                width: 400px;
+                padding: 10px;
+                margin: auto;
+            }
+
             table{
                 width: 500px;
                 border-collapse: collapse;
+                margin: auto;
+                position: relative;
+            }
+
+            caption{
+                font-size: 1.5em;
+                font-weight: bold;
+                padding: 10px;
+                background-color: lightgray;
             }
 
             td, th{
@@ -21,8 +43,18 @@
             }
 
             thead, tfoot{
-                background-color: gray;
+                background-color: rgb(36, 36, 36);
                 color: white;
+            }
+
+            thead > tr > th{
+                position: sticky;
+                top: -1px;
+                background-color: rgb(36, 36, 36);
+            }
+
+            tbody > tr:nth-child(2n-1){
+                background-color: lightgray;
             }
 
             td.num{
@@ -38,6 +70,7 @@
             Anatomia pra tabelas grandes
             
             Table
+                Caption
                 thead
                     tr, td, th
                 tbody
@@ -47,10 +80,12 @@
         -->
 
         <table>
+            <caption>População das Unidades Federativas</caption>
+
             <thead>
                 <tr>
-                    <th>Estado</th>
-                    <th>População</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col" style="width: 50px;">População</th>
                 </tr>
             </thead>
 
@@ -193,10 +228,22 @@
 
             <tfoot>
                 <tr>
-                    <th>Total de Habitantes</th>
+                    <th scope="row">Total de Habitantes</th>
                     <td class="num"><strong>199.864.755</strong></td>
                 </tr>
             </tfoot>
         </table>
+
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident ad rerum reprehenderit sapiente mollitia. Nobis officiis in molestias iusto corrupti illo minima hic laudantium voluptatibus est nihil enim, eveniet mollitia. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nemo ipsa nam. Et ratione mollitia cupiditate voluptate officia explicabo harum corrupti? Modi obcaecati assumenda corporis tempora quis voluptate vero saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore tempore id natus nemo, nesciunt ab molestias adipisci rerum ad numquam! Officia distinctio consequuntur quis expedita libero natus laborum inventore cum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore culpa dolor necessitatibus numquam, atque est id, accusantium, ab aspernatur perspiciatis cum tempora adipisci omnis. Doloribus eos quas libero! Qui, corporis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ipsam illo nulla aliquam impedit ea? Excepturi, quaerat necessitatibus facere fugiat dolorum nam laudantium sint beatae officiis! Quae atque cupiditate repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, earum laborum? Officiis impedit necessitatibus neque iusto officia explicabo, odio quo sequi labore cupiditate voluptatum aliquid, perferendis dolores iure nobis eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores laudantium sit magnam repellendus adipisci esse minima ut numquam amet at cupiditate, molestias quae pariatur delectus aliquid enim maxime quasi veritatis?
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident ad rerum reprehenderit sapiente mollitia. Nobis officiis in molestias iusto corrupti illo minima hic laudantium voluptatibus est nihil enim, eveniet mollitia. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nemo ipsa nam. Et ratione mollitia cupiditate voluptate officia explicabo harum corrupti? Modi obcaecati assumenda corporis tempora quis voluptate vero saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore tempore id natus nemo, nesciunt ab molestias adipisci rerum ad numquam! Officia distinctio consequuntur quis expedita libero natus laborum inventore cum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore culpa dolor necessitatibus numquam, atque est id, accusantium, ab aspernatur perspiciatis cum tempora adipisci omnis. Doloribus eos quas libero! Qui, corporis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ipsam illo nulla aliquam impedit ea? Excepturi, quaerat necessitatibus facere fugiat dolorum nam laudantium sint beatae officiis! Quae atque cupiditate repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, earum laborum? Officiis impedit necessitatibus neque iusto officia explicabo, odio quo sequi labore cupiditate voluptatum aliquid, perferendis dolores iure nobis eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores laudantium sit magnam repellendus adipisci esse minima ut numquam amet at cupiditate, molestias quae pariatur delectus aliquid enim maxime quasi veritatis?
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident ad rerum reprehenderit sapiente mollitia. Nobis officiis in molestias iusto corrupti illo minima hic laudantium voluptatibus est nihil enim, eveniet mollitia. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nemo ipsa nam. Et ratione mollitia cupiditate voluptate officia explicabo harum corrupti? Modi obcaecati assumenda corporis tempora quis voluptate vero saepe? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore tempore id natus nemo, nesciunt ab molestias adipisci rerum ad numquam! Officia distinctio consequuntur quis expedita libero natus laborum inventore cum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore culpa dolor necessitatibus numquam, atque est id, accusantium, ab aspernatur perspiciatis cum tempora adipisci omnis. Doloribus eos quas libero! Qui, corporis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ipsam illo nulla aliquam impedit ea? Excepturi, quaerat necessitatibus facere fugiat dolorum nam laudantium sint beatae officiis! Quae atque cupiditate repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, earum laborum? Officiis impedit necessitatibus neque iusto officia explicabo, odio quo sequi labore cupiditate voluptatum aliquid, perferendis dolores iure nobis eligendi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores laudantium sit magnam repellendus adipisci esse minima ut numquam amet at cupiditate, molestias quae pariatur delectus aliquid enim maxime quasi veritatis?
+        </p>
     </body>
 </html>
