--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -42,15 +42,22 @@
 
             <thead>
                 <tr>
-                    <th>Grupos</th>
-                    <th>Nomes</th>
-                    <th colspan="3">filmes</th>
+                    <th scope="col">Grupos</th>
+                    <th scope="col">Nomes</th>
+                    <th colspan="3" scope="colgroup">filmes</th>
                 </tr>
             </thead>
 
+            <tfoot>
+                <tr>
+                    <th colspan="4" scope="row">Total</th>
+                    <td>10000</td>
+                </tr>
+            </tfoot>
+
             <tbody>
                 <tr>
-                    <th rowspan="3">Mulheres</th>
+                    <th rowspan="3" scope="rowgroup">Mulheres</th>
                     <td>Ana Maria Santos</td>
                     <td>Alien</td>
                     <td>Rambo</td>
@@ -72,7 +79,7 @@
                 </tr>
 
                 <tr>
-                    <th rowspan="3">Homens</th>
+                    <th rowspan="3" scope="rowgroup">Homens</th>
                     <td>Bruno Mendonça</td>
                     <td>Intocáveis</td>
                     <td>Amnésia</td>
