--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -23,7 +23,11 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ipsa dicta sequi alias aperiam possimus nihil quia, qui maiores adipisci nulla. Minus libero repellat aperiam nesciunt perferendis quidem illo et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatum dolorum, pariatur quaerat maxime in necessitatibus minima ullam quia et tempore tenetur reiciendis quibusdam sequi maiores numquam atque fugit molestiae?</p>
 
-        <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+        <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+
+            <p>Infelizmente seu navegador não é compatível com isso!</p>
+
+        </iframe>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ipsa dicta sequi alias aperiam possimus nihil quia, qui maiores adipisci nulla. Minus libero repellat aperiam nesciunt perferendis quidem illo et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptatum dolorum, pariatur quaerat maxime in necessitatibus minima ullam quia et tempore tenetur reiciendis quibusdam sequi maiores numquam atque fugit molestiae?</p>
     </body>
