--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -33,7 +33,7 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga temporibus hic dolorem magnam aliquam recusandae et autem ipsum repellat. Amet fugiat fuga labore vero, esse molestias modi mollitia eius. Voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis exercitationem similique ab non nihil nulla debitis cumque labore sunt voluptatem autem, aperiam incidunt ad quas nam fugit eum, quam sit.</p>
 
-        <iframe id="tela" name="frame" src="">
+        <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur sed eaque temporibus neque, quod minima iusto, nam eum, nulla alias eveniet libero recusandae qui fugiat id nisi? Consequatur, mollitia cupiditate.</p><img src'imagens/lamborghini.jpg'>">
             <p>Infelizmente seu navegador não é compatível com isso!</p>
         </iframe>
 
