--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Teste de Formulário</h1>
 
-        <form action="cadastro.php" method="POST" autocomplete="on">
+        <form action="cadastroo.php" method="POST" autocomplete="on">
             <p>
                 <label for="iusu">Usuário:</label>
                 <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15" size="10" placeholder="nome do usuário" autocomplete="username">
