--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilos/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
         <title>Media Query</title>
     </head>
 
@@ -11,7 +12,9 @@
         <header>
             <h1>Meu Site</h1>
 
-            <menu>
+            <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+
+            <menu id="itens">
                 <ul>
                     <li><a href="">Opção 1</a></li>
                     <li><a href="">Opção 2</a></li>
@@ -33,5 +36,15 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eaque similique nesciunt saepe ut veniam temporibus eveniet perspiciatis vitae numquam doloribus in voluptatum, quam doloremque, architecto consequuntur atque dignissimos excepturi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, saepe iusto perspiciatis, maiores, corporis blanditiis distinctio sed error ab voluptas dolore totam alias architecto qui quidem laborum eum autem. Tenetur!</p>
             </article>      
         </main>
+
+        <script>
+            function clickMenu(){
+                if (itens.style.display == 'block'){
+                    itens.style.display = 'none'
+                } else{
+                    itens.style.display = 'block'
+                }
+            }
+        </script>
     </body>
 </html>
