--- a/exercicios/ex028/grid01/index.html
+++ b/exercicios/ex028/grid01/index.html
@@ -18,8 +18,10 @@
             grid-template-columns: auto auto auto;
             grid-template-rows: auto auto auto;
             gap: 20px;
-            align-content: space-around;
-            justify-items: center;
+            align-items: normal;
+            justify-items: normal;
+            align-content: normal;
+            justify-content: space-evenly;
         }
 
         .item {
