--- a/exercicios/ex028/grid03/index.html
+++ b/exercicios/ex028/grid03/index.html
@@ -14,11 +14,15 @@
         div.container {
             border: 3px solid blue;
             display: grid;
-            height: 250px;
-            grid-template: repeat(3, auto) / repeat(3, auto);
+            /* height: 250px; */
+            grid-template-rows: repeat(3, 80px);
+            grid-template-columns: 100px 40% repeat(2, 1fr);
+            grid-auto-flow: column;
+            grid-auto-rows: 80px;
+            grid-auto-columns: 120px;
             gap: 20px;
-            place-items: start center;
-            place-content: space-between end;
+            place-items: normal normal;
+            place-content: normal normal;
         }
 
         .item {
@@ -38,6 +42,7 @@
         <div class="item">G</div>
         <div class="item">H</div>
         <div class="item">I</div>
+        <div class="item">J</div>
     </div>
 </body>
 
